k8s/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  clusterIP: None        # headless : requis par le StatefulSet (DNS stable mariadb-0)
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
