k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel
spec:
  selector:
    app: laravel          # cible les pods du Deployment (lien Service -> pods par label)
  ports:
    - port: 80
      targetPort: 80      # port du conteneur Apache
